// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://strapi.io"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Strapi
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://strapi.io"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Strapi
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://strapi.io"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Strapi
</a>
`;
